[gd_scene load_steps=8 format=2]

[ext_resource path="res://Projecttiles/PlayerBullet/PlayerBullet.gd" type="Script" id=1]
[ext_resource path="res://Projecttiles/PlayerBullet/Player-Shoot/player-shoot4.png" type="Texture" id=2]
[ext_resource path="res://Projecttiles/PlayerBullet/Player-Shoot/player-shoot2.png" type="Texture" id=3]
[ext_resource path="res://Projecttiles/PlayerBullet/Player-Shoot/player-shoot1.png" type="Texture" id=4]
[ext_resource path="res://Projecttiles/PlayerBullet/Player-Shoot/player-shoot3.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 18.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 3.75 )

[node name="PlayerBullet" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -3, 0 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 129

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 9.53674e-07 )
scale = Vector2( 0.9, 0.85 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
